[tool.poetry]
name = "admin"
version = "0.1.0"
description = ""
authors = ["seongchan.hwang <seongchan.hwang@navercorp.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.41.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
